@@ -177,6 +177,7 @@ HIL64- [libpari] function family Flj_*
 HIL68- [libpari] functions Flv_dotproduct_pre, Flx_eval_pre,
        Flx_eval_powers_pre, FlxY_eval_powers_pre, FlxY_evalx_powers_pre
 HIL69- GP functions polclass, polmodular
+BA 70- ellcard over fields of medium characteristic (SEA, Kedlaya, Satoh)
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
